[package]
name = "yt-bevy-procreate-dreams"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
bevy_asset_loader = { version = "0.18.0", features = ["2d"] }
leafwing-input-manager = "0.11.1"
leafwing_abilities = "0.6.0"
